# llm-template

./: pyproject.toml
modeling/: config.yaml  data.py  main.py  model.py  utils.py
