[tool.poetry]
name = "llm-template"
version = "0.1.0"
description = ""
authors = ["daehyeon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lightning = "^2.4.0"
transformers = "^4.46.2"
datasets = "^3.1.0"
langchain = "^0.3.7"
lxml = "^5.3.0"
pyfiglet = "^1.0.2"
typer = "^0.13.0"
addict = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
